--- a/src/main/resources/assets/gti/lang/zh_CN.lang
+++ b/src/main/resources/assets/gti/lang/zh_CN.lang
@@ -87,6 +87,7 @@ item.gti.MillTeeth.name=磨齿
 item.gti.MillWheel.name=磨轮
 item.gti.RigidPaper.name=硬质纸
 item.gti.RigidPaperPack.name=硬质纸袋
+item.gti.ItemDryFood.name=干货
 
 item.gti.food.DiamondApple.name=钻石苹果
 
