--- a/src/main/resources/assets/gti/lang/zh_CN.lang
+++ b/src/main/resources/assets/gti/lang/zh_CN.lang
@@ -95,6 +95,7 @@ item.gti.SaltWaterBucket.name=咸水桶
 item.gti.AdvSolarLensUnit.name=聚能镜片单元
 item.gti.AdvSolarLensGroup.name=聚能镜片组
 item.gti.AdvSolarLensCluster.name=聚能镜片簇
+item.gti.ItemCEU.name=CEU
 
 item.gti.food.DiamondApple.name=钻石苹果
 
