--- a/src/main/resources/assets/productionline/lang/zh_CN.lang
+++ b/src/main/resources/assets/productionline/lang/zh_CN.lang
@@ -114,6 +114,8 @@ achievement.CarbonizeFurnace=缺氧燃烧技术
 achievement.CarbonizeFurnace.desc=制作一个碳化燃烧炉
 achievement.getIrOre=比钻石更好
 achievement.getIrOre.desc=挖到一个铱矿石
+achievement.yourHouseBombed=你家炸了
+achievement.yourHouseBombed.desc=:( What the hell?
 
 [tooltip]
 ProductionLine.tooltip.CarbonizeFurnace=缺氧燃烧，燃烧能力有限
