--- a/src/main/resources/assets/productionline/lang/zh_CN.lang
+++ b/src/main/resources/assets/productionline/lang/zh_CN.lang
@@ -1,159 +1,20 @@
 #ProductionLine Language file
 #zh_CN
 
-[ITEM_GROUP]
-itemGroup.productionline=ProductionLine
-
-[GUI]
-gui.productionline.FluidKineticGenerator=流体动能发生机
-gui.productionline.FluidKineticGenerator.output=输出: %s
-gui.productionline.FluidKineticGenerator.max-output=最大输出: %s
-gui.productionline.CarbonizeFurnace=碳化燃烧炉
-gui.productionline.HeatDryer=干燥机
-gui.productionline.EVSU=EVSU
-gui.productionline.CSEU=CSEU
-gui.productionline.ParallelSpaceSU=平行空间储电盒
-gui.productionline.AdvSolar=聚能太阳能
-gui.productionline.AdvSolar.lens=缺少聚能镜片
-
-[BLOCKS]
-tile.productionline.block.CompressedWaterHyacinth.name=压缩水葫芦
-tile.productionline.block.oreIridium.name=铱矿石
-tile.productionline.block.WaterHyacinth.name=水葫芦
-tile.productionline.block.FluidKineticGenerator.name=流体动能发生机
-tile.productionline.block.CarbonizeFurnace.name=碳化燃烧炉
-tile.productionline.block.HeatDryer.name=干燥机
-tile.productionline.block.DehydratedWaterHyacinthBlock.name=脱水水葫芦块
-tile.productionline.block.EVSU.name=EVSU
-tile.productionline.block.AirBrakeCasing.name=气闸外壳
-tile.productionline.block.CSEU.name=CSEU
-tile.productionline.block.ParallelSpaceSU.name=平行空间储电盒
-tile.productionline.block.AdvSolar.name=聚能太阳能
-tile.productionline.block.HardWood.name=硬质木块
-tile.productionline.block.OpticalGlass=光学玻璃
-
-[ITEMS]
-//crushed
-item.productionline.CrushedIridium.name=粉碎的铱矿石
-item.productionline.CleanedCrushedIridium.name=纯净的粉碎的铱矿石
-
-//dust
-item.productionline.DustIridium.name=铱矿石粉
-item.productionline.SmallDustIridium.name=小撮铱矿石粉
-
-//ingot
-item.productionline.IngotIridium.name=铱锭
-item.productionline.HeatInsulationMaterial.name=隔热材料
-
-//plate
-item.productionline.HeatInsulationPlate.name=隔热板
-item.productionline.DenseDiamondPlate.name=致密钻石板
-item.productionline.DiamondPlate.name=钻石板
-
-//tool
-item.productionline.IridiumPickaxe.name=铱镐
-item.productionline.IridiumAxe.name=铱斧
-item.productionline.IridiumSpade.name=铱铲
-item.productionline.IridiumSword.name=铱剑
-item.productionline.IronTreetap.name=铁龙头
-item.productionline.BronzeTreetap.name=青铜龙头
-item.productionline.LeadTreetap.name=铅龙头
-item.productionline.RefinedIronTreetap.name=精炼铁龙头
-item.productionline.AdvancedAlloyTreetap.name=高级合金龙头
-item.productionline.CarbonTreetap.name=碳板龙头
-
-//item
-item.productionline.BambooCharcoal.name=竹炭
-item.productionline.AirBrakeUnit.name=气闸单元
-item.productionline.Salt.name=食盐
-item.productionline.PackagedSalt.name=一小袋盐
-item.productionline.CarbonTube.name=碳管
-item.productionline.SmallCompressedWaterHyacinth.name=小块压缩水葫芦
-item.productionline.Roller.name=滚轴
-item.productionline.RedstoneModule.name=红石模块
-item.productionline.LazuliModule.name=青金石模块
-item.productionline.ObsidianPlateGravityField.name=重力场黑曜石板
-item.productionline.ElectronicCircuitControl.name=控制电路
-item.productionline.ElectronicCircuitCore.name=电路基座
-item.productionline.PulseElectronicCircuitControl.name=脉冲控制电路
-item.productionline.PulseElectronicCircuitCore.name=脉冲电路基座
-item.productionline.CyclotronParticleAccelerator.name=等离子冲撞通道
-item.productionline.CalculateUnit.name=运算单元
-item.productionline.CalculateChunk.name=运算区块
-item.productionline.CalculateArray.name=运算矩阵
-item.productionline.FloatPointCalculationsRegion.name=浮点运算区
-item.productionline.ParallelSpaceConverter.name=平行空间转换器
-item.productionline.UUMatterCore.name=UU物质生成机核心
-item.productionline.ObsidianMechanicalFrame.name=黑曜石机械框架
-item.productionline.ObsidianMechanicalCasing.name=黑曜石机械外壳
-item.productionline.CarbonCrystal.name=碳元素水晶
-item.productionline.EnderCalculationCrystal.name=末影运算水晶
-item.productionline.MillTeeth.name=磨齿
-item.productionline.MillWheel.name=磨轮
-item.productionline.RigidPaper.name=硬质纸
-item.productionline.RigidPaperPack.name=硬质纸袋
-item.productionline.ItemDryFood.name=干货
-item.productionline.SaltWaterBucket.name=咸水桶
-item.productionline.AdvSolarLensUnit.name=聚能镜片单元
-item.productionline.AdvSolarLensGroup.name=聚能镜片组
-item.productionline.AdvSolarLensCluster.name=聚能镜片簇
-item.productionline.CEU.name=CEU
-item.productionline.Tiles.name=瓦片
-item.productionline.PaperBag.name=纸袋
-item.productionline.CorrugatedPaper.name=瓦楞纸
-item.productionline.WoodPulp.name=木浆
-item.productionline.SawDust.name=木屑
-item.productionline.Faggot.name=柴捆
-item.productionline.CrudeWood.name=粗制木条
-item.productionline.Batten.name=板条
-item.productionline.ChainPiece.name=链片
-item.productionline.Sprocket.name=链齿
-item.productionline.IronChain.name=铁质链条
-item.productionline.SteelChain.name=钢质链条
-item.productionline.ToothedChain.name=带齿链条
-item.productionline.HeatResistantBrick.name=耐热砖
-
-//weapon
-item.productionline.GravityRay.name=重力势能
-
-//food
-item.productionline.food.DiamondApple.name=钻石苹果
-
-//record
-item.productionline.record_musicspring.name=MusicSpring
-item.productionline.record_musicspring.desc=MusicSpring -- Seedking
-
-[entity]
-entity.productionline.Throwable.name=可投掷实体
-entity.productionline.Ray.name=重力势能
-
-[achievement]
-achievement.CarbonizeFurnace=缺氧燃烧技术
-achievement.CarbonizeFurnace.desc=制作一个碳化燃烧炉
-achievement.getIrOre=比钻石更好
-achievement.getIrOre.desc=挖到一个铱矿石
-
-[tooltip]
-productionline.tooltip.CarbonizeFurnace=缺氧燃烧，燃烧能力有限
-
-item.productionline.record_musicspring.desc1=乐泉
-item.productionline.record_musicspring.desc2=Seedking
-
-item.productionline.SmallCompressedWaterHyacinth.desc1=不敢想象如此小块居然融合了八棵水葫芦的精华
-item.productionline.HeatInsulationMaterial.desc1=这货的唯一用处就是制作隔热板
-item.productionline.HeatInsulationPlate.desc1=暖暖的，好贴心
-item.productionline.Roller.desc1=看起来并没有什么卵用
-item.productionline.heatInsulationBoard.desc1=有了这个，妈妈再也不用担心岩浆桶烫手了
-item.productionline.thermalInsulationMaterial.desc1=制作隔热板的唯一原料
-item.productionline.DiamondPlate.desc1=纯钻石打造
-item.productionline.DenseDiamondPlate.desc1=更闪，更硬a
-item.productionline.BambooCharcoal.desc1=散发着诡异的绿色
-item.productionline.CarbonTube.desc1=一条黑色而坚韧的细线
-
-item.productionline.food.DiamondApple.desc1=你确定你敢吃？
-
-[POTION]
-productionline.potion.Salty=好咸
-
-[DEATH]
-death.attack.salty=%1$s 被咸死了
+[Item]
+item.productionline.super_csrashsag.name=超凡垃圾袋
+item.productionline.ender_pearl_powder.name=末影珍珠粉
+item.productionline.cpu_mk1.name=工业级处理器
+item.productionline.cpu_mk2.name=信息级处理器
+item.productionline.cpu_mk3.name=末影级处理器
+item.productionline.fake_head.name=假的头
+item.productionline.toad_coin.name=虾蟆硬币
+item.productionline.life_converter.name=生命信息超次元转换芯片
+item.productionline.condensed_impurities.name=凝结杂质
+item.productionline.heart_of_lava.name=熔岩之心
+item.productionline.heart_of_pure_white.name=洁白之心
+item.productionline.heart_of_ender.name=末影之心
+item.productionline.liquid_exp_bucket.name=经验液体桶
+item.productionline.ender_pearl_bucket.name=熔融末影珍珠桶
+item.productionline.brine_bucket.name=盐水桶
+item.productionline.iridium_ingot.name=铱锭
