--- a/src/main/resources/assets/productionline/lang/en_us.lang
+++ b/src/main/resources/assets/productionline/lang/en_us.lang
@@ -5,6 +5,7 @@ itemGroup.ProductionLine=Production Line
 
 # Blocks
 tile.productionline.block.ore_iridium.name=Iridium Ore
+tile.productionline.block.generator.tefnut_tear.name=Tefnut's Tear
 
 # Items
 item.productionline.ingot_iridium.name=Iridium Ingot
@@ -16,4 +17,4 @@ item.productionline.enchanting_seal_another_world.name=Enchanting Seal: Another-
 item.productionline.sheep_crook.name=Sheep Crook
 item.productionline.aquamarine.name=Aquamarine
 item.productionline.converting_seal_black_cat.name=Converting Seal: Black-Cat
-item.productionline.desert_eye.name=Desert Eye
+item.productionline.eye_of_the_desert.name=Desert Eye
