add lang to Osiris flower

--- a/src/main/resources/assets/productionline/lang/en_us.lang
+++ b/src/main/resources/assets/productionline/lang/en_us.lang
@@ -18,3 +18,5 @@ item.productionline.sheep_crook.name=Sheep Crook
 item.productionline.aquamarine.name=Aquamarine
 item.productionline.converting_seal_black_cat.name=Converting Seal: Black-Cat
 item.productionline.eye_of_the_desert.name=Desert Eye
+
+tile.botania:flower.the_flower_of_osiris.name=The Flower Of OSIRIS
