--- a/src/main/resources/assets/productionline/lang/zh_cn.lang
+++ b/src/main/resources/assets/productionline/lang/zh_cn.lang
@@ -18,3 +18,5 @@ item.productionline.sheep_crook.name=牧羊杖
 item.productionline.aquamarine.name=水结晶
 item.productionline.converter_card_black_cat.name=模式转换卡：黑猫
 item.productionline.eye_of_the_desert.name=沙漠之眼
+
+tile.botania:flower.the_flower_of_osiris.name=欧西里斯之花
